[package]
name = "unsafe-access"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Utility macros for skipping bounds checks via get_unchecked(..)"
authors = ["waitfreemaxi <waitfree@proton.me"]
repository = "https://github.com/waitfreemaxi/unsafe-access"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full", "visit-mut"] }
quote = "1.0"
proc-macro2 = "1.0"

[dev-dependencies]
criterion = "0.5.1"
rand = "0.8.5"


[[bench]]
name = "access"
harness = false
